Moved logo to separate div

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@ layout: home
 css: /assets/css/frontpage.css
 ---
 
-<div class="home-info">
+<div class="home-logo">
   <p align="center">
     <a style="display: inline-block;">
       <img height="300" alt=".Net Core Logo" src="https://raw.githubusercontent.com/sandeepnkulkarni/sandeepnkulkarni.github.io/master/assets/img/sk_logo.png" />
     </a>    
   </p>
-  <p />
+</div>  
+<div class="home-info">
   <p><a href="https://sandeepnkulkarni.github.io/kubernetes-tutorials/">Kubernetes Tutorials</a></p>
   <p><a href="https://sandeepnkulkarni.github.io/dotnetcore-tutorials/">.Net Core Tutorials</a></p>
   <div id="created-by">Created by <a href="https://github.com/sandeepnkulkarni/">Sandeep Kulkarni</a></div>
