--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@ css: /assets/css/frontpage.css
 <div class="home-logo">
   <p align="center">
     <a style="display: inline-block;">
-      <img height="300" alt=".Net Core Logo" src="https://raw.githubusercontent.com/sandeepnkulkarni/sandeepnkulkarni.github.io/master/assets/img/sk_logo.png" />
+      <img height="250" alt=".Net Core Logo" src="https://raw.githubusercontent.com/sandeepnkulkarni/sandeepnkulkarni.github.io/master/assets/img/sk_logo.png" />
     </a>    
   </p>
 </div>  
 <div class="home-info">
-  <p><a href="https://sandeepnkulkarni.github.io/kubernetes-tutorials/">Kubernetes Tutorials</a></p>
-  <p><a href="https://sandeepnkulkarni.github.io/dotnetcore-tutorials/">.Net Core Tutorials</a></p>
+  <h2>Tutorials</h2>  
+  <ul>
+    <li><a href="https://sandeepnkulkarni.github.io/kubernetes-tutorials/">Kubernetes Tutorials</a></li>
+    <li><a href="https://sandeepnkulkarni.github.io/dotnetcore-tutorials/">.Net Core Tutorials</a></li>
+  </ul>
   <div id="created-by">Created by <a href="https://github.com/sandeepnkulkarni/">Sandeep Kulkarni</a></div>
 </div>
